Lazy load debate images and fix size to avoid shifts

--- a/app/assets/stylesheets/frontend/components/_petitions.scss
+++ b/app/assets/stylesheets/frontend/components/_petitions.scss
@@ -147,6 +147,13 @@
     @include responsive-margin(2, bottom);
   }
 
+  img {
+    aspect-ratio: calc(375/211);
+    background-color: #000;
+    margin-top: spacing(3);
+    width: 100%;
+  }
+
   dl {
     @include font-size(22);
     @include responsive-margin(4, top);
